--- a/PondFishing/PondFishing/FishMarket/InterfaceBuilder/FishMarket.storyboard
+++ b/PondFishing/PondFishing/FishMarket/InterfaceBuilder/FishMarket.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VSq-az-ZfS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VSq-az-ZfS">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,7 +34,7 @@
                         <viewLayoutGuide key="safeArea" id="R2b-xr-sJi"/>
                         <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Fish Market" image="tray.and.arrow.down" catalog="system" id="Ngd-wK-fCK"/>
+                    <tabBarItem key="tabBarItem" title="Fish Market" image="square.and.arrow.up.on.square" catalog="system" id="Ngd-wK-fCK"/>
                     <connections>
                         <outlet property="labelNumberSold" destination="7uj-Pe-piM" id="u8O-tk-Abz"/>
                         <outlet property="labelTitle" destination="uZ7-UG-Cug" id="PT8-mH-x1s"/>
@@ -46,6 +46,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tray.and.arrow.down" catalog="system" width="128" height="109"/>
+        <image name="square.and.arrow.up.on.square" catalog="system" width="119" height="128"/>
     </resources>
 </document>
